@@ -2,6 +2,12 @@
 \title{DiffBind News}
 \encoding{UTF-8}
 
+\section{Version 3.4.6}{
+\itemize{
+ \item{More checks (dba.load() etc) for Called}
+}
+}
+
 \section{Version 3.4.5}{
 \itemize{
  \item{Change spike-in normalization to use reference library sizes}
